<resources>
    <string name="app_name">鑫贝通宝</string>\
    <string name="home">首页</string>
    <string name="money">出借</string>
    <string name="about">发现</string>
    <string name="mine">我的</string>
    <string name="xinrenhaoli">新手福利</string>
    <string name="xinxi">信息披露</string>
    <string name="anquan">安全保障</string>
    <string name="tuijian">推荐返利</string>
    <string name="xianshijia">限时加息1%</string>
    <string name="nianhuashouyi">年化利率</string>
    <string name="linghuocunqu">灵活存取</string>
    <string name="dangri">当日计息</string>
    <string name="gaoxiao">高效回报</string>
    <string name="liji">立即抢购</string>
    <string name="jingppin">精品推荐</string>
    <string name="touziqixian">出借期限</string>
    <string name="shengyuyue">剩余金额</string>
    <string name="shengyutime">剩余时间</string>
    <string name="borrowamount">总金额</string>


    <string name="details_item1_1">1.存入当日即起息，次日结息</string>
    <string name="details_item1_2">2.次日结息后，利息发放到账户余额中</string>
    <string name="details_item5_1">锁定期后随时赎回</string>

    <string name="mine_count">我的红包</string>
    <string name="discount_dj_item1">· 在出借时使用，只计算其额外利息；</string>
    <string name="discount_dj_item2">· 该券最高使用比例是出借额的1%；</string>
    <string name="discount_dj_item3">· 该券不与其他优惠券同时使用</string>
    <string name="discount_jx_item1">· 限新手标使用，该券限用一次；</string>
    <string name="discount_jx_item2">· 用户最终可获得其出借产生的利息；</string>


    <!-- Gesture code starting -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用户名登录</string>
    <string name="set_gesture_pattern">请设置手势密码</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <!-- End -->
    <string name="chager_tips_1">1.充值金额最小金额100元;\n2.充值免手续费;\n3.为了您的资金安全,平台仅支持同卡进出;\n4.本站目前仅支持富友支付进行充值;
    \n5.如有任何问题请联系客服人员</string>
    <string name="withdraw_tip">1. 提现手续费2元/笔;\n2. 到账时间说明：工作日15:00之前申请提现的，预计T+0个工作日到账；工作日16:00之后申请提现的，预计T+1个工作日到账(节假日时间顺延）。
        \n 3. 单笔提现范围：100~50000元，单日不限笔数，不限金额。\n(注:"T日"指工作日)</string>

    <string name="ransom_tip">1.工作日14:30前申请赎回当天16:00前回款至账户余额;
    \n2.工作日14:30后赎回的将在下一个工作日16:00前回款至账户余额;</string>
    <string name="my_tips_1">当天计息，次日结息，锁定期后可继续享有利息</string>
    <string name="my_tips_2">1.单笔赎回最低额度为0.01元，最大额度不超过对应滴滴宝额度;\n2.工作日14：30前申请赎回当天16:00前回款至账户余额，工作日14:30后赎回的将在下一工作日16:00前回款至账户余额;
       \n3.如遇周末节假日，赎回到账时间顺延至下一工作日;\n4.资金回款至账户余额后，您可选择再次购买理财产品.

   </string>
    <string name="done">重新获取</string>
    <string name="withdraw_tip_xian">限额说明：快捷限额单笔5万，具体限额以银行为准</string>
    <string name="share">邀请好友</string>
    <string name="share_link">邀请链接</string>
    <string name="tv_contracts_lease">《鑫贝通宝点对点借款合同》</string>
    <string name="tv_service_agreement">《鑫贝通宝注册服务协议》</string>
    <string name="readandagree">我已阅读并同意</string>
    <string name="tv_not_readandagree">尚未阅读或同意《鑫贝通宝注册服务协议》</string>

    <string name="activity_rule">活动规则</string>
    <string name="mine_date">工作日：9:00-18:00</string>
    <string name="mine_kefu">客服微信：xbtbd1 | 客服qq：2597854160</string>
    <string name="addbank_tips">目前可支持13家银行进行绑卡：工商银行、中国银行、建设银行、邮政储蓄银行、平安银行、光大银行、广发银行、中信银行、兴业银行、华夏银行、浦发银行、交通银行、上海银行（其中邮储和上海银行交易需要开通银联在线支付功能。）仅支持储蓄卡绑定，不支持信用卡绑定。</string>
    <string name="activity_rule_text">
        1.受邀人首次出借金额 ≥1000元，邀请人可获现金10元；受邀人首次出借金额 ≥3000元，邀请人可获现金30元；受邀人首次出借金额 ≥5000元，邀请人可获现金50元；受邀人首次出借金额 ≥10000元，邀请人可获现金100元；
受邀人首次出借金额 ≥20000元，邀请人可获现金200元；受邀人首次出借金额 ≥30000元，邀请人可获现金300元；受邀人首次出借金额 ≥50000元，邀请人可获现金500元；受邀人首次出借金额 ≥100000元，邀请人可获现金1000元；

\n2.受邀人须在注册时填入邀请人的手机号或通过邀请人链接注册平台账户；

\n3.受邀人首次出借生效后，邀请奖励即刻发放至邀请人账户；

\n4.严禁用户恶意刷单，一切通过不法手段获得的奖励，一经发现，将取消奖励的发放；活动最终解释权归鑫贝通宝所有，客服电话：400-065-1520（工作日 9:00-18:00）。

</string>
</resources>
