<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/tab_one"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/tab_two"
        android:title="@string/money"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/tab_three"
        android:title="@string/about"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/re_profile"
        android:enabled="true"
        android:icon="@drawable/tab_four"
        android:title="@string/mine"
        app:showAsAction="ifRoom" />
</menu>