<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/home_titile"></include>

        <RelativeLayout
            android:id="@+id/invest_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_margin"
            android:background="@mipmap/didibao_shouye"
            android:paddingBottom="@dimen/home_margin_top"

            >


            <TextView
                style="@style/Home_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_left_round"
                android:text="@string/tuijian"
                android:textColor="@color/white" />


            <TextView
                style="@style/Home_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/home_margin"
                android:background="@drawable/rect_rounded_left_right_arc"
                android:text="@string/xianshijia"
                android:textColor="@color/white"
                android:textSize="@dimen/text_samll_size"
                />

            <TextView
                android:id="@+id/didibao_lilv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/home_four_margin_top"
                android:text="7.8%+2%"
                android:textColor="@color/black_home_four_larger"
                android:textSize="@dimen/text_larger_size"
                tools:text="7.8%+2%" />

            <TextView
                android:id="@+id/nianhua"
                android:layout_below="@+id/didibao_lilv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_home_four_midle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/home_margin"
                tools:text="年化收益"
                android:text="@string/nianhuashouyi"
                />

            <LinearLayout
                android:id="@+id/didibao_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nianhua"
                android:layout_marginTop="@dimen/home_margin"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/linghuocunqu"
                    android:textColor="@color/black_home_four_small"
                    android:layout_marginRight="@dimen/home_margin"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black_home_four_small"

                    ></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dangri"
                    android:textColor="@color/black_home_four_small"
                    android:layout_marginRight="@dimen/home_margin"
                    android:layout_marginLeft="@dimen/home_margin"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black_home_four_small"

                    ></View>
                <TextView
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gaoxiao"
                    android:textColor="@color/black_home_four_small"
                    />

            </LinearLayout>

            <TextView
                style="@style/Home_padding"
                android:layout_below="@+id/didibao_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_gradient_linear"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/home_margin"
                android:text="@string/liji"
                android:textColor="@color/white"
                />



        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/public_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/home_item_five"
            tools:layoutManager="LinearLayoutManager"
            tools:spanCount="4"
            ></android.support.v7.widget.RecyclerView>



    </LinearLayout>

</android.support.v4.widget.NestedScrollView>