<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/home_margin"
    android:background="@mipmap/didibao_shouye"
    android:paddingBottom="@dimen/home_margin_top"
    android:id="@+id/home_four_rl"

    >


        <TextView
            style="@style/Home_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_left_round"
            android:text="滴滴宝"
            android:textColor="@color/white" />


        <TextView
            style="@style/Home_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/home_margin"
            android:background="@drawable/rect_rounded_left_right_arc"
            android:text="限时加息2%"
            android:textColor="@color/white"
            android:textSize="@dimen/text_samll_size"
            />

        <TextView
            android:id="@+id/didibao_lilv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/home_four_margin_top"
            android:textColor="@color/num_color"
            android:textSize="@dimen/text_larger_size"
            tools:text="7.8%+2%" />

        <TextView
            android:id="@+id/nianhua"
            android:layout_below="@+id/didibao_lilv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_home_four_midle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/home_margin"
            tools:text="@string/nianhuashouyi"
            android:text="@string/nianhuashouyi"
            />

        <LinearLayout
            android:id="@+id/didibao_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nianhua"
            android:layout_marginTop="@dimen/home_margin"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/linghuocunqu"
                android:textColor="@color/black_home_four_small"
                android:layout_marginRight="@dimen/home_margin"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black_home_four_small"

                ></View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dangri"
                android:textColor="@color/black_home_four_small"
                android:layout_marginRight="@dimen/home_margin"
                android:layout_marginLeft="@dimen/home_margin"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black_home_four_small"

                ></View>
            <TextView
                android:layout_marginLeft="@dimen/home_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gaoxiao"
                android:textColor="@color/black_home_four_small"
                />

        </LinearLayout>

        <TextView
            style="@style/Home_padding"
            android:layout_below="@+id/didibao_ll"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_gradient_linear"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/home_margin"
            android:text="@string/liji"
            android:textColor="@color/white"
            />



</RelativeLayout>